# JustFine

./: .env.example  README.md  api_to_notion.py  property-map.example.json  pyproject.toml  requirements.txt
.github/workflows/: notion-api-sync.yml
Formula/: justfine-api-sync.rb
justfine/: __init__.py  spec.py
justfine/core/: __init__.py  engine.py
justfine/output/: notion_adapter.py
justfine/parsers/: __init__.py  base.py  django_parser.py  express_parser.py  factory.py  nestjs_parser.py  spring_parser.py
